ingress-nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: ingress-nginx
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: nginx
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ingress-nginx-ingress-nginx-controller
                port:
                  number: 80
            path: /
            pathType: Prefix
